fix styles for the collapsed menu

--- a/sass/02_molecule/_m-menus.scss
+++ b/sass/02_molecule/_m-menus.scss
@@ -82,7 +82,7 @@
 	button {
 		display: inline-block;
 		-webkit-appearance: none;
-		margin: 7px 0 11px 0;
+		margin: 9px 0 14px 0;
 		border: 0;
 		color: $color__white;
 		background: transparent;
